test/errors/struct_no_definida.mg
% EXPECT: struct no definida: Inexistente
display_size 5 5
Inexistente()
